deploy-complex-app/internal-nlb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-nlb-svc
  labels:
    app: demo-app-nlb-svc
  annotations:
    oci.oraclecloud.com/load-balancer-type: "nlb"
    service.beta.kubernetes.io/oci-load-balancer-internal: "true"
    #service.beta.kubernetes.io/oci-load-balancer-subnet1: "ocid1.subnet.oc1..aaaaaa....vdfw"
  namespace: redis
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: demo-app-dp
